mType/tests/testFiles/import/error/circular_a.mt
import "circular_b.mt";
        function funcA(): int {
            return 1;
        }